# dias

./: .gitignore  NOTICE  README.md  pyproject.toml  supp.md
.github/ISSUE_TEMPLATE/: pattern-request.md
dias/: dyn.py  metap_client.py  nb_utils.py  patt_matcher.py  patt_matcher_mp.py  rewriter.py  test.py
examples/: README.md  crossing-boundaries.ipynb  inspecting_output.ipynb  landing.ipynb  nsmallest.ipynb  str_split.ipynb
new-tests/: gen_tests.py  run_tests.sh  test_code.py
rewriter/: nb_utils.py  rewriter.py
tests/: FAIL_change_in_same_cell.ipynb  FAIL_change_in_same_cell.json  apply_axis_1.ipynb  apply_axis_1.json  apply_axis_1_lambda.ipynb  apply_axis_1_lambda.json  apply_axis_1_top_level_name.ipynb  apply_axis_1_top_level_name.json  apply_axis_1_top_level_sub.ipynb  apply_axis_1_top_level_sub.json  apply_axis_1_tricky.ipynb  apply_axis_1_tricky.json  apply_only_math.ipynb  apply_only_math.json  apply_only_math_extern_arg_wrong_type.json  apply_only_math_extern_args.ipynb  apply_vectorized_lambda.ipynb  apply_vectorized_lambda.json  apply_vectorized_lambda_chained.ipynb  apply_vectorized_lambda_chained.json  fusable_replace_unique.ipynb  fusable_replace_unique.json  fusable_str_split.ipynb  fusable_str_split.json  fuse_apply.ipynb  fuse_apply.json  fuse_isin.ipynb  fuse_isin.json  gen_static_tests.py  inplace_update.ipynb  inplace_update.json  install.sh  len_unique.ipynb  len_unique.json  remove_axis_1_lambda.ipynb  replace_remove_list.ipynb  replace_remove_list.json  replace_remove_list_inplace.ipynb  replace_remove_list_inplace.json  run_all_files.sh  (+42 more)
(+138 files in other folders)
