[project]
name = "dias"
version = "0.1.4"
authors = [
  { name="Stefanos Baziotis", email="sb54@illinois.edu" },
]
description = "Dynamic rewriting of pandas code"
readme = "README.md"
requires-python = ">=3.7,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "astor >= 0.8.1",
    "pandas == 1.5.1",
    "numpy == 1.23.5",
    "nbformat==5.7.0",
    "ipython==8.7.0"
]

[project.urls]
"Homepage" = "https://github.com/ADAPT-uiuc/dias"
